2001-05-13 07:55 UTC-0800 Brian Hays <bhays@abacuslaw.com>

   * source/rdd/dbcmd.c
      * dbAppend: set NetErr to True if SELF_APPEND fails

   * contrib/rdd_ads/ads.ch
      * added SET EPOCH TO and SET DATE FORMAT

   * contrib/rdd_ads/adsfunc.c
      + added AdsGetTableAlias() to confirm ADS's idea of the alias
      + added AdsSetEpoch() and AdsSetDateFormat()
         Done as get/set functions (returns previous setting)
      + added AdsCloseAllTables()
      * changed ShowPercentage for Indexing CallBacks to return
         the value from the codeblock to the Server.
         Pass 0 to continue, 1 (non-zero) to abort

   * contrib/rdd_ads/ads1.c
      * Fixed adsOpen() to pass along the correct alias to ADS
      * added DumpArea()  for debugging: call this to dump ads server
         settings to HB_TRACE. Currently in a quick-and-dirty state...

   * source/vm/arrayshb.c
      * added HB_ArrayID()
         Useful for debugging: returns the array's "address" so dual
         references to same array can be seen */

   * source/vm/arrays.c
      * in hb_arrayFromStack added missing ";" needed for debug build


2001-05-13 22:10 UTC+1 JFL (mafact) <jfl@mafact.com>
   * harbour/include/hboo.ch
     + added #define to allow a better control of __objGetMsgList()
     #define HB_MSGLISTALL   0
     #define HB_MSGLISTCLASS 1
     #define HB_MSGLISTPURE  2
   * harbour/source/rtl/objfunc.prg
     * Modified __objGetMsgList()
   * harbour/source/vm/classes.c
     * Modified hb___msgClsSel() to be used by __objGetMsgList()

2001-05-13 09:40 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * include/hbclass.ch
     % Removed many redundant rules (recently added for OO integrity checks).

     /* Found the PP problem that stopped me from implementing this optimized form before.
        It seems the PP has a problem with "[" follwing a an identifier without a space prefix like:
        #command TEST[([<param,...>])]

        It seems to work OK like this: