@@ -1,3 +1,8 @@
+2001-05-14 22:14 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
+   * source/rdd/dbfntx/dbfntx1.c
+     * bugs fixed, reported by John M. S. Chiang, related to indexing of
+       an empty file and packing
+
 2001-05-13 07:55 UTC-0800 Brian Hays <bhays@abacuslaw.com>
 
    * source/rdd/dbcmd.c
